game mech working

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <h1 class="rock1">Rock</h1>
                 <h1 class="paper1">Paper</h1>
                 <h1 class="scissors1">Scissors</h1>
-                <div class"p1WinLoss">Win: 0 - Loss: 0 - Tie: 0</div>
+                <div class="p1WinLoss">Win: 0 - Loss: 0 - Tie: 0</div>
             </div>
             <div class="col-4">
                 <div class="prompt1">Play the game!</div>
@@ -55,7 +55,7 @@
                 <h1 class="rock2">Rock</h1>
                 <h1 class="paper2">Paper</h1>
                 <h1 class="scissors2">Scissors</h1>
-                <div class"p2WinLoss">Win: 0 - Loss: 0 - Tie: 0</div>
+                <div class="p2WinLoss">Win: 0 - Loss: 0 - Tie: 0</div>
             </div>
         </div>
         <div class="row chat">
