--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
         <div class="jumbotron">
             <h1>Rock Paper Scissors</h1>
         </div>
-        <!-- <div class="row startGame">
-            <div class="col col-12">
-                <form id="inputForm">
-                    <input type="text" class="form-control" id="inputName" required>
-                    <button type="button" id="btn-name" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Submit</button>
-                </form>
-            </div>
-        </div> -->
         <form id="inputForm">
             <div class="input-group startGame">
                 <input type="text" class="form-control" id="inputName" required>
@@ -45,7 +37,7 @@
                 <h1 class="scissors1">Scissors</h1>
                 <div class="p1WinLoss">Win: 0 - Loss: 0 - Tie: 0</div>
             </div>
-            <div class="col-4">
+            <div class="col-4 text-center">
                 <div class="prompt1">Play the game!</div>
                 <div class="prompt3">Play the game!</div>
                 <div class="prompt2">Play the game!</div>
@@ -63,8 +55,10 @@
                 <div class="chatArea">hello</div>
             </div>
             <div class="col-4">
-                <input type="text" class="form-control" id="name" required>
-                <button type="button" id="btn-name" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Submit</button>
+                <form id="chatForm">
+                    <input type="text" class="form-control" id="chat-input" required>
+                    <button type="button" id="btn-chat" class="btn btn-primary"><span class="glyphicon glyphicon-search"></span>Submit</button>
+                </form>
             </div>
         </div>
     </div>
